# tempo-x402

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE-REFACTOR.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  NEXT-STEPS.md  README.md  SYSTEM_PRUNING_AUDIT.md  audit_identity.txt  available_tools.txt  chat_audit_report.txt  claude.md  connectivity_audit.txt  connectivity_test_output.txt  deny.toml  diagnostic_report.md  discovered_peers.json  discovery_audit.txt  fix_unused.py  identity_audit.txt  info_test.json  llms.txt  map_peers.py  network_identity.txt  nixpacks.toml  presence_validation_audit.json  probe_files.txt  registration_audit_report.txt  research_collector.sh  safe_headers.sh  siblings.json  start.sh  summarize_soul.py  system_files_audit.txt  tool_availability_audit.txt
crates/tempo-x402/: CLAUDE.md  Cargo.toml  README.md
crates/tempo-x402-agent/: CLAUDE.md  Cargo.toml
crates/tempo-x402-agent/src/: clone.rs  lib.rs  railway.rs
crates/tempo-x402-app/: CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  style.css  vercel.json
crates/tempo-x402-app/src/: api.rs  cartridge_runner.rs  cartridges.rs  lib.rs  studio.rs  timeline.rs  wallet.rs  wallet_crypto.rs
crates/tempo-x402-app/src/components/: chat.rs  cockpit.rs  dashboard.rs  endpoints.rs  header.rs  home.rs  instance.rs  mandala.rs  mod.rs  nav.rs  soul_panel.rs  wallet_panel.rs
crates/tempo-x402-cartridge/: CLAUDE.md  Cargo.toml
crates/tempo-x402-cartridge/src/: abi.rs  compiler.rs  engine.rs  error.rs  lib.rs  manifest.rs
crates/tempo-x402-client/: CLAUDE.md  Cargo.toml  README.md
crates/tempo-x402-client/src/: http_client.rs  lib.rs  main.rs  scheme_client.rs
crates/tempo-x402-client/tests/: e2e_clone.rs  e2e_gateway.rs
crates/tempo-x402-facilitator/: CLAUDE.md  Cargo.toml  README.md
crates/tempo-x402-facilitator/src/: lib.rs  main.rs  metrics.rs  routes.rs  state.rs  webhook.rs
crates/tempo-x402-facilitator/tests/: integration.rs
crates/tempo-x402-gateway/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
crates/tempo-x402-gateway/src/: config.rs  cors.rs  db.rs  error.rs  lib.rs  main.rs  metrics.rs  middleware.rs  proxy.rs  state.rs  validation.rs
crates/tempo-x402-gateway/src/facilitator/: bootstrap.rs  mod.rs  routes.rs  state.rs  webhook.rs
crates/tempo-x402-gateway/src/routes/: analytics.rs  endpoints.rs  gateway.rs  health.rs  mod.rs  register.rs
crates/tempo-x402-identity/: CLAUDE.md  Cargo.toml
crates/tempo-x402-identity/src/: contracts.rs  deploy.rs  discovery.rs  lib.rs  onchain.rs  recovery.rs  reputation.rs  types.rs  validation.rs
crates/tempo-x402-mind/: CLAUDE.md  Cargo.toml
crates/tempo-x402-mind/src/: callosum.rs  config.rs  consolidation.rs  hemisphere.rs  lib.rs  memory.rs  subconscious.rs
crates/tempo-x402-model/: CLAUDE.md  Cargo.toml
crates/tempo-x402-model/src/: bpe.rs  codegen.rs  diff_features.rs  inference.rs  lib.rs  quality.rs  trainer.rs  transformer.rs  unified.rs  vocab.rs
crates/tempo-x402-node/: CLAUDE.md  Cargo.toml  build.rs
crates/tempo-x402-node/src/: clone.rs  db.rs  main.rs  railway.rs  soul_observer.rs  state.rs
crates/tempo-x402-node/src/routes/: cartridges.rs  clone.rs  health.rs  instance.rs  mod.rs  scripts.rs  soul.rs  utils.rs  validation.rs  wallet.rs
crates/tempo-x402-paper/: Cargo.toml
crates/tempo-x402-paper/src/: humaneval.rs  main.rs  results.rs  runner.rs  selfplay.rs
crates/tempo-x402-paper/src/backends/: claude.rs  codegen15m.rs  gemini.rs  local.rs  mod.rs
crates/tempo-x402-security-audit/: CLAUDE.md  Cargo.toml
crates/tempo-x402-security-audit/src/: lib.rs
crates/tempo-x402-security-audit/tests/: security_invariants.rs
crates/tempo-x402-server/: CLAUDE.md  Cargo.toml  README.md
crates/tempo-x402-server/src/: config.rs  lib.rs  main.rs  metrics.rs  middleware.rs  routes.rs
crates/tempo-x402-soul/: CLAUDE.md  Cargo.toml
crates/tempo-x402-soul/:memory:/125c747a-5209-45ab-bdce-b29b4cf11caa/: db
crates/tempo-x402-soul/:memory:/5cff512f-2017-4b8d-bf87-e828e325160c/: db
crates/tempo-x402-soul/:memory:8b510555-d3e4-4bfb-9b62-8c29d48b5c74:db/: db
crates/tempo-x402-soul/src/: acceleration.rs  autonomy.rs  benchmark.rs  benchmark_utils.rs  bloch.rs  brain.rs  capability.rs  chat.rs  code_quality.rs  codegen.rs  coding.rs  cognitive_cartridge.rs  collective.rs  colony.rs  computer_use.rs  config.rs  cortex.rs  db.rs  elo.rs  error.rs  evaluation.rs  events.rs  feedback.rs  fitness.rs  free_energy.rs  gemini.rs  genesis.rs  git.rs  guard.rs  hivemind.rs  housekeeping.rs  interaction.rs  lib.rs  lifecycle.rs  llm.rs  memory.rs  mode.rs  model.rs  moe.rs  neuroplastic.rs  (+20 more)
crates/tempo-x402-soul/src/db/: beliefs.rs  (+15 more)
crates/tempo-x402-soul/training_data/: README.md  verify.sh  verify_all.sh
crates/tempo-x402-wallet/: CLAUDE.md  Cargo.toml
crates/tempo-x402-wallet/src/: lib.rs
crates/tempo-x402/src/: approve.rs  constants.rs  eip712.rs  error.rs  facilitator_client.rs  hmac.rs  http_client.rs  lib.rs  network.rs  nonce_store.rs  payment.rs  response.rs  scheme.rs  scheme_facilitator.rs  scheme_server.rs  security.rs  tip20.rs  wallet.rs
crates/tempo-x402/tests/: e2e_clone.rs  e2e_gateway.rs  nonce_purge_overflow.rs  verification_failures.rs
crates/x402-client/: Cargo.toml
crates/x402-client/src/: approve.rs  lib.rs  main.rs
crates/x402-facilitator/: Cargo.toml
crates/x402-facilitator/src/: lib.rs  main.rs  routes.rs  state.rs  webhook.rs
crates/x402-facilitator/tests/: integration.rs
crates/x402-server/: Cargo.toml
crates/x402-server/src/: config.rs  main.rs  metrics.rs  middleware.rs  routes.rs
crates/x402-tempo/: Cargo.toml
crates/x402-tempo/src/: client.rs  eip712.rs  facilitator.rs  lib.rs  server.rs
crates/x402-tempo/tests/: verification_failures.rs
crates/x402-types/: Cargo.toml
crates/x402-types/src/: lib.rs  response.rs
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/crates/x402-frontend/: Cargo.toml  index.html  style.css
rust/crates/x402-tempo/: Cargo.toml
rust/crates/x402-types/: Cargo.toml
(+305 files in other folders)
