[workspace]
resolver = "2"
members = [
    "crates/x402",
    "crates/x402-facilitator",
    "crates/x402-server",
]

[workspace.dependencies]
x402 = { path = "crates/x402", version = "0.1.0", package = "tempo-x402" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
actix-web = "4"
actix-cors = "0.7"
actix-governor = "0.8"
tokio-stream = "0.1"
futures = "0.3"
dashmap = "6"
prometheus = "0.14"
lazy_static = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
hmac = "0.12"
sha2 = "0.10"

alloy = { version = "1", features = [
    "full",
    "sol-types",
    "signers",
    "signer-local",
    "contract",
    "provider-http",
    "network",
] }
