[workspace]
resolver = "2"
members = [
    "crates/tempo-x402",
    "crates/tempo-x402-agent",
    "crates/tempo-x402-app",
    "crates/tempo-x402-client",
    "crates/tempo-x402-facilitator",
    "crates/tempo-x402-gateway",
    "crates/tempo-x402-identity",
    "crates/tempo-x402-node",
    "crates/tempo-x402-security-audit",
    "crates/tempo-x402-server",
    "crates/tempo-x402-wallet",
]

[workspace.dependencies]
x402 = { path = "crates/tempo-x402", version = "0.6.6", package = "tempo-x402" }
x402-agent = { path = "crates/tempo-x402-agent", version = "0.6.6", package = "tempo-x402-agent" }
x402-facilitator = { path = "crates/tempo-x402-facilitator", version = "0.6.6", package = "tempo-x402-facilitator" }
x402-gateway = { path = "crates/tempo-x402-gateway", version = "0.6.6", package = "tempo-x402-gateway" }
x402-identity = { path = "crates/tempo-x402-identity", version = "0.6.6", package = "tempo-x402-identity" }
x402-wallet = { path = "crates/tempo-x402-wallet", version = "0.6.6", package = "tempo-x402-wallet" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
actix-governor = "0.8"
tokio-stream = "0.1"
futures = "0.3"
dashmap = "6"
prometheus = "0.14"
lazy_static = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
url = "2"
urlencoding = "2"

alloy = { version = "1", features = [
    "full",
    "sol-types",
    "signers",
    "signer-local",
    "contract",
    "provider-http",
    "network",
] }

# Optimize WASM builds for small size
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
