[workspace]
resolver = "2"
members = [
    "crates/tempo-x402",
    "crates/tempo-x402-app",
    "crates/tempo-x402-cartridge",
    "crates/tempo-x402-gateway",
    "crates/tempo-x402-identity",
    "crates/tempo-x402-model",
    "crates/tempo-x402-node",
    "crates/tempo-x402-security-audit",
    "crates/tempo-x402-soul",
]

[workspace.dependencies]
x402 = { path = "crates/tempo-x402", version = "6.1.2", package = "tempo-x402" }
x402-gateway = { path = "crates/tempo-x402-gateway", version = "6.1.2", package = "tempo-x402-gateway" }
x402-identity = { path = "crates/tempo-x402-identity", version = "6.1.2", package = "tempo-x402-identity" }
x402-soul = { path = "crates/tempo-x402-soul", version = "6.1.2", package = "tempo-x402-soul" }
x402-cartridge = { path = "crates/tempo-x402-cartridge", version = "6.1.2", package = "tempo-x402-cartridge" }
wasmtime = { version = "29", features = ["cranelift"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.13", features = ["json"] }
actix-web = "4.13"
actix-cors = "0.7"
actix-files = "0.6"
actix-governor = "0.10"
tokio-stream = "0.1"
futures = "0.3"
dashmap = "6"
prometheus = "0.14"
rusqlite = { version = "0.39", features = ["bundled"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
url = "2"
urlencoding = "2"

alloy = { version = "1.7", features = [
    "sol-types",
    "signers",
    "signer-local",
    "contract",
    "provider-http",
    "network",
    "rpc-types",
] }

# Optimize WASM builds for small size
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
