[workspace]
resolver = "2"
members = [
    "crates/x402-types",
    "crates/x402-tempo",
    "crates/x402-facilitator",
    "crates/x402-server",
    "crates/x402-client",
]
exclude = [
    "crates/x402-frontend",
]

[workspace.dependencies]
x402-types = { path = "crates/x402-types" }
x402-tempo = { path = "crates/x402-tempo" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
actix-governor = "0.8"
tokio-stream = "0.1"
futures = "0.3"
dashmap = "6"
hmac = "0.12"
sha2 = "0.10"

alloy = { version = "1", features = [
    "full",
    "sol-types",
    "signers",
    "signer-local",
    "contract",
    "provider-http",
    "network",
] }
