[package]
name = "tempo-x402-agent"
version = "0.7.0"
edition = "2021"
description = "Agent orchestration for x402: Railway API client, clone spawning, instance management"
license = "MIT"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "tempo", "agent", "self-replicating", "railway"]
categories = ["web-programming", "cryptography::cryptocurrencies"]

[lib]
name = "x402_agent"

[dependencies]
x402-identity = { workspace = true }
x402 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
