[package]
name = "tempo-x402-cartridge"
version = "6.1.1"
edition = "2021"
description = "WASM cartridge runtime for x402 nodes — sandboxed app execution with payment rails"
license = "MIT"
repository = "https://github.com/compusophy/tempo-x402"

[lib]
name = "x402_cartridge"

[dependencies]
wasmtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
