[package]
name = "tempo-x402-facilitator"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "x402 facilitator server for payment verification and on-chain settlement"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "payment", "facilitator", "settlement"]
categories = ["web-programming::http-server"]

[lib]
name = "x402_facilitator"
path = "src/lib.rs"

[[bin]]
name = "x402-facilitator"
path = "src/main.rs"

[dependencies]
x402 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-governor = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
alloy = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
actix-rt = "2"
serde_json = { workspace = true }
x402 = { workspace = true }
alloy = { workspace = true }
