[package]
name = "tempo-x402-gateway"
version = "0.11.0"
edition = "2021"
description = "Relay/proxy service that adds x402 payment rails to any HTTP API"
license = "MIT"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "tempo", "payments", "api-gateway", "proxy"]
categories = ["web-programming", "cryptography::cryptocurrencies"]

[lib]
name = "x402_gateway"
path = "src/lib.rs"

[[bin]]
name = "x402-gateway"
path = "src/main.rs"

[dependencies]
x402 = { workspace = true }
x402-facilitator = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-files = { workspace = true }
actix-governor = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
alloy = { workspace = true }
base64 = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
sha2 = { workspace = true }
