[package]
name = "tempo-x402-identity"
version = "0.6.5"
edition = "2021"
description = "Identity management for x402 instances: wallet generation, persistence, faucet funding, lineage"
license = "MIT"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "tempo", "identity", "wallet", "self-replicating"]
categories = ["web-programming", "cryptography::cryptocurrencies"]

[lib]
name = "x402_identity"

[dependencies]
x402-wallet = { workspace = true }
x402 = { workspace = true }
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
