[package]
name = "tempo-x402-identity"
version = "2.7.0"
edition = "2021"
description = "Identity management for x402 instances: wallet generation, persistence, faucet funding, on-chain ERC-8004 agent identity"
license = "MIT"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "tempo", "identity", "erc8004", "agent"]
categories = ["web-programming", "cryptography::cryptocurrencies"]

[lib]
name = "x402_identity"

[features]
default = ["erc8004"]
erc8004 = []

[dependencies]
x402 = { workspace = true }
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
