[package]
name = "tempo-x402-mind"
version = "1.0.0"
edition = "2021"
description = "Lateralized dual-soul architecture: two specialized hemispheres with active integration"
license = "MIT"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "tempo", "mind", "dual-process", "agent"]
categories = ["web-programming", "cryptography::cryptocurrencies"]

[dependencies]
x402 = { workspace = true }
x402-soul = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
