[package]
name = "tempo-x402-mind"
version = "1.3.2"
edition = "2021"
description = "Subconscious background processing: memory decay, pruning, promotion, consolidation"
license = "MIT"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "tempo", "mind", "memory", "agent"]
categories = ["web-programming", "cryptography::cryptocurrencies"]

[dependencies]
x402-soul = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
