[package]
name = "tempo-x402-model"
version = "5.0.0"
edition = "2021"
description = "Sequence model for autonomous plan generation — trained on colony collective experience"
license = "MIT"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "model", "transformer", "planning", "agi"]
categories = ["science", "algorithms"]

[lib]
name = "x402_model"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
