[package]
name = "tempo-x402-paper"
version = "0.1.0"
edition = "2021"
publish = false
description = "Research benchmark harness — self-play fine-tuning of small code models"

[[bin]]
name = "paper-bench"
path = "src/main.rs"

[dependencies]
x402-soul = { workspace = true }
x402-model = { path = "../tempo-x402-model", package = "tempo-x402-model" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
