[package]
name = "tempo-x402-security-audit"
version = "0.4.1"
edition = "2021"
publish = false
description = "Security invariant tests for the tempo-x402 payment gateway"

# This is a test-only crate — no runtime dependencies.
# All tests run as part of `cargo test --workspace` to enforce
# security invariants on every CI build.

[dev-dependencies]
walkdir = "2"
regex = "1"
