[package]
name = "tempo-x402-server"
version = "0.6.9"
edition = "2021"
license = "MIT"
description = "x402 resource server with payment middleware for gating API endpoints"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "payment", "api", "middleware"]
categories = ["web-programming::http-server"]

[lib]
name = "x402_server"
path = "src/lib.rs"

[[bin]]
name = "x402-server"
path = "src/main.rs"

[dependencies]
x402 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-governor = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
alloy = { workspace = true }
base64 = { workspace = true }
tokio-stream = { workspace = true }
prometheus = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
