[package]
name = "tempo-x402-soul"
version = "0.7.0"
edition = "2021"
description = "Agentic soul for x402 nodes: observe-think-record loop powered by Gemini"
license = "MIT"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "tempo", "soul", "agent", "ai"]
categories = ["web-programming", "cryptography::cryptocurrencies"]

[dependencies]
x402 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
