[package]
name = "tempo-x402-wallet"
version = "0.4.1"
edition = "2021"
description = "WASM-compatible wallet for x402 payments: key generation, EIP-712 signing, payment payloads"
license = "MIT"
repository = "https://github.com/compusophy/tempo-x402"

[lib]
name = "x402_wallet"

[dependencies]
alloy = { version = "1", default-features = false, features = [
    "sol-types", "signers", "signer-local"
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
