[package]
name = "tempo-x402-wallet"
version = "0.6.2"
edition = "2021"
description = "WASM-compatible wallet for x402 payments: key generation, EIP-712 signing, payment payloads"
license = "MIT"
repository = "https://github.com/compusophy/tempo-x402"

[lib]
name = "x402_wallet"

[features]
default = []
demo = []

[dependencies]
alloy = { version = "1", default-features = false, features = [
    "sol-types", "signers", "signer-local"
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
x402 = { package = "tempo-x402", path = "../tempo-x402" }
