[package]
name = "tempo-x402"
version = "0.6.3"
edition = "2021"
license = "MIT"
description = "x402 payment protocol library for Tempo blockchain (EIP-712, TIP-20, client)"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "payment", "eip712", "tempo", "tip20"]
categories = ["cryptography", "web-programming"]

[lib]
name = "x402"
path = "src/lib.rs"

[[bin]]
name = "x402-approve"
path = "src/approve.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
alloy = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
rand = "0.9"
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
serde_json = { workspace = true }
base64 = { workspace = true }
