[package]
name = "x402-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "x402 client library and CLI for making paid API requests"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "payment", "client", "eip712"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "x402-client"
path = "src/main.rs"

[[bin]]
name = "x402-approve"
path = "src/approve.rs"

[dependencies]
x402-types = { workspace = true }
x402-tempo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
alloy = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
base64 = { workspace = true }
