[package]
name = "x402-facilitator"
version = "0.1.0"
edition = "2021"

[dependencies]
x402-types = { workspace = true }
x402-tempo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-governor = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
alloy = { workspace = true }
