[package]
name = "x402-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "x402_server"
path = "src/lib.rs"

[[bin]]
name = "x402-server"
path = "src/main.rs"

[dependencies]
x402-types = { workspace = true }
x402-tempo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-governor = { workspace = true }
actix-files = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
alloy = { workspace = true }
base64 = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
