[package]
name = "x402-tempo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tempo blockchain scheme implementation for x402 (EIP-712 signing, TIP-20 settlement)"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "tempo", "eip712", "tip20"]
categories = ["cryptography", "web-programming"]

[dependencies]
x402-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
alloy = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = "0.9"
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
