[package]
name = "x402-types"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core types, traits, and constants for the x402 payment protocol"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "payment", "eip712", "blockchain"]
categories = ["cryptography", "web-programming"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
alloy = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
