[package]
name = "x402-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
gloo-net = { version = "0.6", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "Navigator", "Clipboard",
    "HtmlDivElement", "Element",
    "RequestInit", "Request", "Response",
    "ReadableStream", "ReadableStreamDefaultReader",
    "TextDecoder", "Window",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
console_log = "1"
gloo-timers = { version = "0.3", features = ["futures"] }
