[package]
name = "x402-tempo"
version = "0.1.0"
edition = "2021"

[dependencies]
x402-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
alloy = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = "0.9"

[dev-dependencies]
tokio = { workspace = true }
