[workspace]

[package]
name = "verify-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "=0.2.108"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "HtmlInputElement", "Window", "Event", "EventTarget", "KeyboardEvent", "MouseEvent", "Storage"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
